--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/estilo.css">
     <title>Projeto1</title>
+
 </head>
 <body>
-    
+    <div id="container">
+        <header>
+            <h1>Cabeçalho</h1>
+        </header>
+        <main id="containerAside">
+            <section id="conteudo">
+                <article>
+                    <h2>conteúdo</h2>
+                </article>
+            </section>
+            <aside>
+                <h2>Aside</h2>
+            </aside>
+            
+        </main>
+        <footer>
+            <h3>&copy;-2025- todos os direitos reservados. </h3>
+        </footer>
+    </div>
+
+
 </body>
 </html>
